model selection and traing

--- a/notebooks/Fraud_Detection.ipynb
+++ b/notebooks/Fraud_Detection.ipynb
@@ -9,16 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os \n",
+    "import sys\n",
     "\n",
     "# Load datasets\n",
-    "fraud_data = pd.read_csv('../data/Fraud_Data.csv')\n",
-    "ip_data = pd.read_csv('../data/IpAddress_to_Country.csv')\n",
-    "# creditcard_data = pd.read_csv('creditcard.csv')"
+    "fraud_data = pd.read_csv('data/Fraud_Data.csv')\n",
+    "ip_data = pd.read_csv('data/IpAddress_to_Country.csv')\n",
+    "\n"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -385,6 +387,190 @@
     "sns.boxplot(data=fraud_data_cleaned, x='class', y='purchase_value')\n",
     "plt.title('Purchase Value by Transaction Class')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preparation and Train-Test-Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creditcard Train Set: (227845, 30) (227845,)\n",
+      "Creditcard Test Set: (56962, 30) (56962,)\n",
+      "Fraud Data Train Set: (120036, 10) (120036,)\n",
+      "Fraud Data Test Set: (30009, 10) (30009,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "creditcard_data = pd.read_csv('../data/creditcard.csv')\n",
+    "# Feature and target separation for creditcard dataset\n",
+    "X_creditcard = creditcard_data.drop('Class', axis=1)  # Features\n",
+    "y_creditcard = creditcard_data['Class']  # Target variable\n",
+    "\n",
+    "# Feature and target separation for Fraud_Data dataset\n",
+    "X_fraud = fraud_data_cleaned.drop('class', axis=1)  # Features\n",
+    "y_fraud = fraud_data_cleaned['class']  # Target variable\n",
+    "\n",
+    "# Train-test split for creditcard dataset\n",
+    "X_creditcard_train, X_creditcard_test, y_creditcard_train, y_creditcard_test = train_test_split(\n",
+    "    X_creditcard, y_creditcard, test_size=0.2, random_state=42, stratify=y_creditcard)\n",
+    "\n",
+    "# Train-test split for Fraud_Data dataset\n",
+    "X_fraud_train, X_fraud_test, y_fraud_train, y_fraud_test = train_test_split(\n",
+    "    X_fraud, y_fraud, test_size=0.2, random_state=42, stratify=y_fraud)\n",
+    "\n",
+    "# Output the shapes of the resulting datasets\n",
+    "print(\"Creditcard Train Set:\", X_creditcard_train.shape, y_creditcard_train.shape)\n",
+    "print(\"Creditcard Test Set:\", X_creditcard_test.shape, y_creditcard_test.shape)\n",
+    "print(\"Fraud Data Train Set:\", X_fraud_train.shape, y_fraud_train.shape)\n",
+    "print(\"Fraud Data Test Set:\", X_fraud_test.shape, y_fraud_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\King Betse\\AppData\\Roaming\\Python\\Python312\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1781/1781\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 816us/step - accuracy: 0.9986 - loss: 0.0487\n",
+      "\n",
+      "MLP Classifier Accuracy: 0.9983\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\King Betse\\AppData\\Roaming\\Python\\Python312\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1781/1781\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 1ms/step - accuracy: 0.9993 - loss: 0.0070\n",
+      "\n",
+      "CNN Accuracy: 0.9991\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\King Betse\\AppData\\Roaming\\Python\\Python312\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:204: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1781/1781\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.9994 - loss: 0.0023\n",
+      "\n",
+      "RNN Accuracy: 0.9993\n",
+      "\u001b[1m1781/1781\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - accuracy: 0.9993 - loss: 0.0023\n",
+      "\n",
+      "LSTM Accuracy: 0.9993\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from script.models import create_mlp, create_cnn, create_rnn, create_lstm, train_decision_tree \n",
+    "\n",
+    "\n",
+    "# Change to the parent directory\n",
+    "os.chdir(r'C:\\Users\\King Betse\\Desktop\\Kifiya-AIM-W8')\n",
+    "\n",
+    "# Add the 'script' directory to the system path\n",
+    "sys.path.append(os.path.abspath('script'))\n",
+    "\n",
+    "# Load the datasets\n",
+    "creditcard_data = pd.read_csv('data/creditcard.csv')\n",
+    "X_creditcard = creditcard_data.drop('Class', axis=1)\n",
+    "y_creditcard = creditcard_data['Class']\n",
+    "\n",
+    "# Train-test split for creditcard dataset\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_creditcard, y_creditcard, test_size=0.2, random_state=42, stratify=y_creditcard)\n",
+    "\n",
+    "# MLP\n",
+    "mlp_model = create_mlp((X_train.shape[1],))\n",
+    "mlp_model.fit(X_train, y_train, epochs=10, batch_size=32, verbose=0)\n",
+    "mlp_loss, mlp_accuracy = mlp_model.evaluate(X_test, y_test)\n",
+    "print(f\"\\nMLP Classifier Accuracy: {mlp_accuracy:.4f}\")\n",
+    "\n",
+    "# Reshape data for CNN, RNN, and LSTM\n",
+    "X_train_cnn = X_train.values.reshape(X_train.shape[0], X_train.shape[1], 1)\n",
+    "X_test_cnn = X_test.values.reshape(X_test.shape[0], X_test.shape[1], 1)\n",
+    "\n",
+    "# CNN\n",
+    "cnn_model = create_cnn((X_train.shape[1], 1))\n",
+    "cnn_model.fit(X_train_cnn, y_train, epochs=10, batch_size=32, verbose=0)\n",
+    "cnn_loss, cnn_accuracy = cnn_model.evaluate(X_test_cnn, y_test)\n",
+    "print(f\"\\nCNN Accuracy: {cnn_accuracy:.4f}\")\n",
+    "\n",
+    "# RNN\n",
+    "rnn_model = create_rnn((X_train.shape[1], 1))\n",
+    "rnn_model.fit(X_train_cnn, y_train, epochs=10, batch_size=32, verbose=0)\n",
+    "rnn_loss, rnn_accuracy = rnn_model.evaluate(X_test_cnn, y_test)\n",
+    "print(f\"\\nRNN Accuracy: {rnn_accuracy:.4f}\")\n",
+    "\n",
+    "# LSTM\n",
+    "lstm_model = create_lstm((X_train.shape[1], 1))\n",
+    "lstm_model.fit(X_train_cnn, y_train, epochs=10, batch_size=32, verbose=0)\n",
+    "lstm_loss, lstm_accuracy = lstm_model.evaluate(X_test_cnn, y_test)\n",
+    "print(f\"\\nLSTM Accuracy: {lstm_accuracy:.4f}\")\n",
+    "\n",
+    "# Evaluate Decision Tree\n",
+    "dt_accuracy = train_decision_tree(X_train, y_train, X_test, y_test)\n",
+    "print(f\"Decision Tree Accuracy: {dt_accuracy:.4f}\")\n",
+    "\n",
+    "# Evaluate Random Forest\n",
+    "rf_accuracy = train_random_forest(X_train, y_train, X_test, y_test)\n",
+    "print(f\"Random Forest Accuracy: {rf_accuracy:.4f}\")\n"
    ]
   }
  ],
